# crm

./: .gitignore  Dockerfile  docker-compose.yaml  passenger_wsgi.py  pyproject.toml  pytest.ini  requirements.txt  requirements.txt.old  requirements_no_versions.txt  script.database_to_csv.py  script.insert_data.py
Emdad/: apps.py  models.py  serializers.py  urls.py  views.py
Emdad/migrations/: 0001_initial.py  0002_initial.py  0003_alter_motor_technecians_alter_region_technecians_and_more.py
EmdadUser/: admin.py  apps.py  backends.py  crm_views.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py
EmdadUser/migrations/: 0001_initial.py  0002_remove_technecian_expertise.py  0003_customuser_raw_password_alter_technecian_balance.py  0004_alter_customuser_raw_password_and_more.py  0005_alter_customuser_phone.py  0006_alter_technecian_user_id.py  0007_alter_technecian_user_id.py
EmdadUser/templatetags/: utils.py
Order/: admin.py  crm_views.py  forms.py  models.py  serializers.py  urls.py  views.py
Order/migrations/: 0001_initial.py  0002_rename_location_order_address.py  0003_order_total_price_cusotmer_and_more.py  0004_alter_followup_total_price_cusotmer_and_more.py  0005_alter_followup_order.py  0006_rename_created_date_followup_time.py  0007_alter_order_motors_alter_order_services.py  0008_alter_followup_user.py  0009_order_commission_alter_order_status.py
Transaction/: forms.py  models.py  serializers.py  urls.py  views.py
Transaction/migrations/: 0001_initial.py  0002_alter_transaction_time.py  0003_alter_transaction_time.py  0004_alter_transaction_time.py
agents/: forms.py  urls.py  views.py
apps/Emdad/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/EmdadUser/: admin.py  apps.py  backends.py  crm_views.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/Order/: apps.py  crm_views.py  forms.py  models.py  serializers.py  urls.py  views.py
company/: forms.py  models.py  urls.py  views.py
crm/: urls.py  wsgi.py
djcrm/: .env  settings.py  urls.py  wsgi.py
leads/: admin.py  forms.py  models.py  urls.py  views.py
static_root/: staticfiles.json
templates/: base.html  dashboard.html  landing.html  navbar.html
(+85 files in other folders)
